# MultiMaid

./: CHANGELOG.md  README.md
.github/workflows/: build.yml
docs/: RELEASE_GATES.md  TECHNICAL_AUDIT.md
multimaid/: CMakeLists.txt  README.md
multimaid/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
multimaid/Source/Core/: Parameters.cpp  Parameters.h
multimaid/Source/DSP/: BandCompressor.h  CrossoverNetwork.h  MultiMaidEngine.h
multimaid/Source/UI/: BandModule.h  CrossoverView.h
multimaid/assets/: MultiMaid_UI_Demo.html
multimaid/config/: ui_contract.json
multimaid/docs/: GitHub_README_Copy.md  RELEASE_GATES.md  ROLE_BOUNDARIES.md  VALIDATION_PLAN.md
tests/: reference_notes.md
